add jpa codes